// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PointCloudChart Should match existing snapshot when given empty data. 1`] = `
<PlotlyChart
  config={
    Object {
      "displayModeBar": false,
    }
  }
  data={
    Array [
      Object {
        "marker": Object {
          "color": "",
          "sizemax": 8,
          "sizemin": 4,
        },
        "mode": "markers",
        "type": "pointcloud",
        "xy": Float32Array [],
      },
    ]
  }
  layout={
    Object {
      "height": 400,
      "legend": Object {},
      "margin": Object {
        "b": 80,
        "l": 40,
        "r": 40,
        "t": 10,
      },
      "showlegend": false,
      "title": "",
      "width": 400,
      "xaxis": Object {
        "autorange": false,
        "range": Array [],
      },
      "yaxis": Object {
        "autorange": false,
        "range": Array [],
      },
    }
  }
  onClickCallback={[Function]}
  onHoverCallback={[Function]}
  onSelectedCallback={[Function]}
  onUnHoverCallback={[Function]}
/>
`;

exports[`PointCloudChart Should match existing snapshot when given simple data. 1`] = `
<PlotlyChart
  config={
    Object {
      "displayModeBar": false,
    }
  }
  data={
    Array [
      Object {
        "marker": Object {
          "color": "magenta",
          "sizemax": 8,
          "sizemin": 4,
        },
        "mode": "markers",
        "type": "pointcloud",
        "xy": Float32Array [
          1,
          2,
          5,
          6,
          6,
          5,
          2,
          1,
        ],
      },
      Object {
        "marker": Object {
          "color": "chartreuse",
          "sizemax": 8,
          "sizemin": 4,
        },
        "mode": "markers",
        "type": "pointcloud",
        "xy": Float32Array [
          8,
          2,
          3,
          4,
          4,
          3,
          2,
          8,
        ],
      },
    ]
  }
  layout={
    Object {
      "height": 400,
      "legend": Object {},
      "margin": Object {
        "b": 80,
        "l": 40,
        "r": 40,
        "t": 10,
      },
      "showlegend": false,
      "title": "",
      "width": 400,
      "xaxis": Object {
        "autorange": false,
        "range": Array [],
      },
      "yaxis": Object {
        "autorange": false,
        "range": Array [],
      },
    }
  }
  onClickCallback={[Function]}
  onHoverCallback={[Function]}
  onSelectedCallback={[Function]}
  onUnHoverCallback={[Function]}
/>
`;
